<resources>
    <string name="app_name">MAD_105_001 Final</string>
    <string name="action_settings">Settings</string>
    <string name="create_sheet">Create Sheet</string>
    <string name="edit_sheet">Edit Sheet</string>
    <string name="Description">Background Image for main screen</string>
    <string name="Strength">Strength</string>
    <string name="Class">Class</string>
    <string name="Dexterity">Dexterity</string>
    <string name="Constitution">Constitution</string>
    <string name="Intelligence">Intelligence</string>
    <string name="Wisdom">Wisdom</string>
    <string name="Charisma">Charisma</string>
    <string name="Name">Name</string>
    <string name="Image_background">Background Image For Main Page</string>
    <string name="Character_Name">Name</string>
    <string name="Strength_Base">0</string>
    <string name="Wisdom_Base">0</string>
    <string name="Charisma_Base">0</string>
    <string name="Intelligence_Base">0</string>
    <string name="Dexterity_Base">0</string>
    <string name="Constitution_Base">0</string>
    <string name="Character_Name_Hint">Name</string>
    <string name="Skills_Button">Character Skill</string>
    <string name="Next">Next</string>
    <string name="CharName"/>
    <string-array name="CLasses">
        <item>"Fighter"</item>
        <item>"Rogue"</item>
        <item>"Wizard"</item>
    </string-array>

</resources>
