<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Create_Sheet">
    <TextView
            android:text="@string/Strength"
            android:layout_width="125dp"
            android:layout_height="30dp"
            android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="80dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="285dp"
            android:layout_marginRight="285dp" android:textSize="22sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="2dp" android:layout_marginStart="2dp" android:layout_marginBottom="34dp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"/>
    <TextView
            android:text="@string/Charisma"
            android:layout_width="129dp"
            android:layout_height="33dp"
            android:id="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="280dp"
            android:layout_marginRight="280dp" android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="2dp" android:layout_marginStart="2dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="103dp" app:layout_constraintTop_toBottomOf="@+id/textView8"/>
    <TextView
            android:text="@string/Charisma"
            android:layout_width="129dp"
            android:layout_height="33dp"
            android:id="@+id/textView8"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="280dp"
            android:layout_marginRight="280dp" android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="2dp" android:layout_marginStart="2dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editText14" android:layout_marginBottom="103dp"
            app:layout_constraintBottom_toTopOf="@+id/textView3"/>
    <TextView
            android:text="@string/Wisdom"
            android:layout_width="129dp"
            android:layout_height="33dp"
            android:id="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="284dp"
            android:layout_marginRight="284dp" android:textSize="22sp" android:layout_marginTop="31dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6" app:layout_constraintStart_toStartOf="parent"
    />
    <TextView
            android:text="@string/Intelligence"
            android:layout_width="129dp"
            android:layout_height="33dp"
            android:id="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="280dp"
            android:layout_marginRight="280dp" android:textSize="22sp" android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/editText9" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="2dp" android:layout_marginStart="2dp" android:layout_marginBottom="31dp"
            app:layout_constraintBottom_toTopOf="@+id/textView7"/>
    <TextView
            android:text="@string/Constitution"
            android:layout_width="129dp"
            android:layout_height="33dp"
            android:id="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="284dp"
            android:layout_marginRight="284dp" android:textSize="22sp" android:layout_marginTop="34dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="27dp" app:layout_constraintBottom_toTopOf="@+id/textView6"/>
    <TextView
            android:text="@string/Dexterity"
            android:layout_width="125dp"
            android:layout_height="30dp"
            android:id="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="284dp"
            android:layout_marginRight="284dp" android:textSize="22sp" android:layout_marginTop="34dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="2dp" android:layout_marginStart="2dp"
    />
    <EditText
            android:layout_width="211dp"
            android:layout_height="47dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText9" android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@+id/editText11" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="72dp" android:layout_marginRight="72dp"/>
    <EditText
            android:layout_width="211dp"
            android:layout_height="47dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText11" android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@+id/editText10" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="73dp" android:layout_marginRight="73dp"/>
    <EditText
            android:layout_width="211dp"
            android:layout_height="47dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText10" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/classes_spinner" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="74dp" android:layout_marginRight="74dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" tools:text="@string/Class"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp" android:textSize="22sp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <Spinner
            android:id="@+id/classes_spinner"
            android:layout_width="372dp"
            android:layout_height="34dp"
            android:layout_marginLeft="3dp" android:layout_marginStart="3dp"
            app:layout_constraintStart_toEndOf="@+id/textView2" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/editText13" android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/editText9" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="67dp" android:layout_marginRight="67dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/editText14" android:layout_marginTop="19dp"
            app:layout_constraintTop_toBottomOf="@+id/editText13" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="70dp" android:layout_marginRight="70dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/editText15" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editText14" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="67dp" android:layout_marginRight="67dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/Name"
            android:ems="10"
            android:id="@+id/editText16" android:layout_marginTop="91dp"
            app:layout_constraintTop_toBottomOf="@+id/editText15" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="67dp" android:layout_marginRight="67dp"/>
    <Button
            android:text="Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Character_Skills" android:layout_marginEnd="17dp" android:layout_marginRight="17dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="17dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>